fix img on mobile

--- a/style.css
+++ b/style.css
@@ -95,3 +95,9 @@ div{
 body{
     position: relative;
 }
+
+@media (max-width: 768px) {
+    body {
+        height:100vh;
+    }
+}
